Resolver problema 6 html y js

--- a/A01610836_Lab4Problema6.html
+++ b/A01610836_Lab4Problema6.html
@@ -30,9 +30,55 @@
             </header>
         <article>
             <strong>Problema 6: </strong>
-            <p>New Year is coming and you are excited to know how many minutes remain before the New Year. You know that currently the clock shows h hours and m minutes, where 0≤hh<24 and 0≤mm<60. We use 24-hour time format <br> Your task is to find the number of minutes before the New Year. <br> You know that New Year comes when the clock shows 0 hours and 0 minutes. You have to answer t independent test cases. <br><br> Input: <br>contains the time as two integers h and m (0≤h<24, 0≤m<60). It is guaranteed that this time is not a midnight, i.e. the following two conditions can't be met at the same time: h=0 and m=0. It is guaranteed that both h and m are given without leading zeros. <br><br> Output: <br>For each test case, print the answer on it — the number of minutes before the New Year.<br></p>
-            <div id="solucionProblema"></div>
+            <p>New Year is coming and you are excited to know how many minutes remain before the New Year. You know that currently the clock shows h hours and m minutes, where 0≤hh<24 and 0≤mm<60. We use 24-hour time format <br> Your task is to find the number of minutes before the New Year. <br> You know that New Year comes when the clock shows 0 hours and 0 minutes. You have to answer t independent test cases. <br><br> Input: <br>contains the time as two integers h and m (0≤h<24, 0≤m<60). It is guaranteed that this time is not a midnight, i.e. the following two conditions can't be met at the same time: h=0 and m=0. It is guaranteed that both h and m are given without leading zeros. <br><br> Output: <br>Print the answer on it — the number of minutes before the New Year.<br></p>
         </article>
-        <script></script>
+        <script src="A01610836_Lab4PRoblema6.js"></script>
+
+        <article>
+            <header>
+                <h1>Preguntas de laboratorio</h1>
+            </header>
+            <strong>¿Qué diferencias y semejanzas hay entre Java y JavaScript?</strong>
+            <p>Diferencias:</p>
+            <ul>
+                <li>Java es un lenguaje de programacióno rientado a objetos, mientras que JavaScript está basado en prototipos</li>
+                <li>JavaScript es débilmente tipado, significando que una misma variable puede contener diferentes tipos de información a lo largo del tiempo, mientras que Java es fuertemente tipado, lo que indica que todas las variables tienen un tipo determinado y no se pueden cambiar una vez definidas.</li>
+                <li>JavaScript es un lenguaje interpretado y Java es un lenguaje compilado</li>
+            </ul>
+            <p>(Cerón, M., s.f.)</p>
+            <p>Semejanzas:</p>
+            <p>Por lo general, no existe una gran similitud entre ambos lenguajes, ya que no se relacionan uno con otro, a excepción del nombre y que parte de la sintaxis es similar. (ISDI coders, 2017)</p>
+            <strong>¿Qué métodos tiene el objeto Date? (Menciona al menos 5*)</strong>
+            <ol>
+                <li>getTime();</li>
+                <li>getDate();</li>
+                <li>getDay();</li>
+                <li>getHours();</li>
+                <li>getMinutes();</li>
+            </ol>
+            <strong>¿Qué métodos tienen los arreglos? (Menciona al menos 5*)</strong>
+            <ol>
+                <li>push();</li>
+                <li>pop();</li>
+                <li>indexOf();</li>
+                <li>slice();</li>
+                <li>forEach();</li>
+            </ol>
+            <p>(Mozilla, s.f.)</p>
+            <strong>¿Cómo se declara una variable con alcance local dentro de una función?</strong>
+            <p>Se utiliza la palabra reservada let</p>
+            <strong>¿Qué implicaciones tiene utilizar variables globales dentro de funciones?</strong>
+            <p>Implica que la variable utilizada no solo tiene presencia en la función, sino que es posible obtener su valor y utilizarla incluso cuando termina la función.</p>
+        </article>
+        <article>
+            <header>
+                <h1>Referencias</h1>
+            </header>
+            <ul>
+                <li>Cerón, M. (s.f.). ¿Qué diferencias hay entre JavaScript y Java?. Recuperado de: <a href="https://www.hackaboss.com/blog/diferencias-javascript-java" target="_blank">https://www.hackaboss.com/blog/diferencias-javascript-java</a> </li>
+                <li>ISDI Coders (2017) ¿Es lo mismo Java que Javascript?. Recuperado de: <a href="https://isdicoders.com/es/blog/es-lo-mismo-java-que-javascript_19381" target="_blank">https://isdicoders.com/es/blog/es-lo-mismo-java-que-javascript_19381</a></li>
+                <li>Mozilla. (s.f.). Array. Recuperado de: <a href="https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Global_Objects/Array" target="_blank">https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Global_Objects/Array</a></li>
+            </ul>
+        </article>
     </body>
 </html>
