Corregir descripción problema 6

--- a/A01610836_Lab4Problema6.html
+++ b/A01610836_Lab4Problema6.html
@@ -30,7 +30,7 @@
             </header>
         <article>
             <strong>Problema 6: </strong>
-            <p>New Year is coming and you are excited to know how many minutes remain before the New Year. You know that currently the clock shows h hours and m minutes, where 0≤hh<24 and 0≤mm<60. We use 24-hour time format <br> Your task is to find the number of minutes before the New Year. <br> You know that New Year comes when the clock shows 0 hours and 0 minutes. You have to answer t independent test cases. <br><br> Input: <br>contains the time as two integers h and m (0≤h<24, 0≤m<60). It is guaranteed that this time is not a midnight, i.e. the following two conditions can't be met at the same time: h=0 and m=0. It is guaranteed that both h and m are given without leading zeros. <br><br> Output: <br>Print the answer on it — the number of minutes before the New Year.<br></p>
+            <p>New Year is coming and you are excited to know how many minutes remain before the New Year. You know that currently the clock shows h hours and m minutes, where 0≤hh<24 and 0≤mm<60. We use 24-hour time format <br> Your task is to find the number of minutes before the New Year. <br> You know that New Year comes when the clock shows 0 hours and 0 minutes. <br><br> Input: <br>contains the time as two integers h and m (0≤h<24, 0≤m<60). It is guaranteed that this time is not a midnight, i.e. the following two conditions can't be met at the same time: h=0 and m=0. It is guaranteed that both h and m are given without leading zeros. <br><br> Output: <br>Print the answer on it — the number of minutes before the New Year.<br></p>
         </article>
         <script src="A01610836_Lab4PRoblema6.js"></script>
 
