Agregar Lab6 Verificar Passwords

--- a/A01610836_Lab6_ValidarPasswords.html
+++ b/A01610836_Lab6_ValidarPasswords.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <title>Laboratorio 6: Validar passwords</title>
-        <link rel="stylesheet" href="A01610836_Lab3.min.css">
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Laboratorio 6: Validar passwords</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+</head>
+
+<body>
+    <section>
         <article>
             <header>
-                <h1>Datos e informacion de contacto</h1>
+                <h1 class="title">Datos e informacion de contacto</h1>
             </header>
-            <table>
+            <table class="table is-hoverable">
                 <tr>
                     <th>Nombre:</th>
                     <td>Miguel Weiping Tang Feng</td>
@@ -27,12 +31,17 @@
         </article>
         <article>
             <header>
-                <h1>Validar passwords</h1>
+                <h2 class="subtitle is-3">Validar passwords</h2>
             </header>
-            <label for="contrasenia">Escribe tu contraseña: </label>
-            <input id="contrasenia" type="text"></input>
             <br>
-            <button id="verificar">Verificar contraseña</button>
+            <label for="password">Contraseña a verificar: </label>
+            <input class="input" id="password" type="text" placeholder="Escribe aquí tu contraseña"></input><br>
+            <br>
+            <button class="button is-primary" id="boton_verificar">Verificar contraseña</button><br><br>
+            <div id="verificacion"></div>
         </article>
-    </body>
+        <script src="A01610836_Lab6_ValidarPasswords.js"></script>
+    </section>
+</body>
+
 </html>
