Agregar .css para validarPasswords y agregar evento que cambia fuente de boton

--- a/A01610836_Lab6_ValidarPasswords.html
+++ b/A01610836_Lab6_ValidarPasswords.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Laboratorio 6: Validar passwords</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="A01610836_Lab6_ValidarPasswords.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         </article>
         <article>
             <header>
-                <h2 class="subtitle is-3">Validar passwords</h2>
+                <h2 class="subtitle is-3"><span id="validar_passwords">Validar passwords</span></h2>
             </header>
             <br>
             <label for="password">Contraseña a verificar: </label>
