--- a/A01610836_Lab6_PaginaVenderProductos.html
+++ b/A01610836_Lab6_PaginaVenderProductos.html
@@ -32,17 +32,10 @@
         </article>
         <article>
             <header>
-                <h2 class="subtitle is-3"><span id="validar_passwords">Validar passwords</span></h2>
+                <h2 class="subtitle is-3">Vender productos</h2>
             </header>
-            <br>
-            <label for="password">Contraseña a verificar: </label>
-            <input class="input" id="password" type="password" placeholder="Escribe aquí tu contraseña"></input><br>
-            <br>
-            <button class="button is-primary" id="boton_verificar">Verificar contraseña</button><br><br>
-            <div id="verificacion"></div>
+            
         </article>
-        <script src="A01610836_Lab6_ValidarPasswords.js"></script>
     </section>
 </body>
-
 </html>
